# tiered_server

./: Cargo.toml  README.md
src/: api.rs  auth.rs  browser.rs  download.rs  email.rs  env.rs  firewalls.rs  handler.rs  headers.rs  hex.rs  iter.rs  lib.rs  main.rs  moderation.rs  norm.rs  otp.rs  prefix.rs  push_webhook.rs  reg.rs  rsa.rs  server.rs  session.rs  store.rs  user.rs  verify.rs
src/auth/: handler.rs  mod.rs
src/auth/endpoints/: credential_creation_options.rs  credential_request_options.rs  credentials.rs  disconnect_user.rs  forget_user.rs  mod.rs  record_credential.rs  validate_credential.rs
src/auth/passkey/: challenge.rs  credential_creations_options.rs  credential_request_options.rs  credentials.rs  mod.rs
src/otp/: action.rs  handler.rs  mod.rs  signature.rs
src/otp/endpoints/: mod.rs  root.rs
src/totp/: action.rs  mod.rs
src/user/: handler.rs  mod.rs
src/user/endpoints/: email.rs  mod.rs  passkeys.rs  root.rs
src/user/endpoints/admin/: login_as.rs  mod.rs  registration_code.rs  registrations.rs  users.rs
