[package]
name = "pb-server"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies.zip_static_handler]
version = "0.15"
features = ["hyper"]

[dependencies.firewall]
version = "0.3"
features = ["github_webhook", "cloudflare", "rustls"]

[dependencies.basic-cookies]
version = "0.1"
default-features = false
features = []

[dependencies.ring]
version = "0.17"
default-features = false
features = ["std", "less-safe-getrandom-custom-or-rdrand"]

[dependencies.coset]
version = "0.3"
default-features = false
features = ["std"]

[dependencies.simple_asn1]
version = "0.6"
default-features = false
features = []

[dependencies.punycode]
version = "0.4"
default-features = false
features = []

[dependencies.unicode-normalization]
version = "0.1"
default-features = false
features = ["std"]

[dependencies.unicode-general-category]
version = "1"
default-features = false
features = []

[dependencies.totp_rfc6238]
version = "0.6"
default-features = false
features = ["ring"]

[dependencies.base64-simd]
version = "0.8"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std", "preserve_order"]

[dependencies.object_store]
version = "0.12"
default-features = false
features = ["fs", "aws", "tls-webpki-roots"]

[dependencies.futures-lite]
version = "2.6"
features = ["std"]

[dependencies.reqwest]
version = "0.12"
features = ["blocking", "rustls-tls", "multipart", "json"]

[dependencies.hyper]
version = "1.6"
default-features = false
features = []

[dependencies.hyper-util]
version = "0.1"
default-features = false
features = ["tokio", "server", "http1"]

[dependencies.http-body-util]
version = "0.1"
default-features = false
features = []

[dependencies.multer]
version = "3.1"
default-features = false
features = ["serde"]

[dependencies.minijinja]
version = "2.8"
default-features = false
features = ["builtins", "serde"]

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring"]

[dependencies.rcgen]
version = "0.13"
default-features = false
features = ["ring", "pem"]

[dependencies.tokio]
version = "1.43"
default-features = false
features = ["net", "time", "macros", "rt", "rt-multi-thread"]

[dependencies.tokio-rustls]
version = "0.26"
default-features = false
features = ["ring"]

[dependencies.pinboard]
version = "2.2"
default-features = false
features = []

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dev-dependencies.rsa-der]
version = "0.3"
default-features = false
features = []

[profile.release]
lto = "fat"
codegen-units = 1
