[package]
name = "tiered_server"
version = "0.5.1"
edition = "2024"
rust-version = "1.85"

[dependencies.zip_static_handler]
version = "0.18"
default-features = false
features = ["hyper"]

[dependencies.firewall]
version = "0.3"
default-features = false
features = ["github_webhook", "cloudflare", "rustls"]

[dependencies.basic-cookies]
version = "0.1"
default-features = false
features = []

[dependencies.ring]
version = "0.17"
default-features = false
features = ["std", "less-safe-getrandom-custom-or-rdrand"]

[dependencies.simple_asn1]
version = "0.6"
default-features = false
features = []

[dependencies.punycode]
version = "0.4"
default-features = false
features = []

[dependencies.unicode-normalization]
version = "0.1"
default-features = false
features = ["std"]

[dependencies.unicode-general-category]
version = "1"
default-features = false
features = []

[dependencies.totp_rfc6238]
version = "0.6"
default-features = false
features = ["ring"]

[dependencies.base64-simd]
version = "0.8"
default-features = false
features = ["std"]

[dependencies.serde]
version = "1.0"
default-features = false
features = ["std", "derive"]

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std", "preserve_order"]

[dependencies.object_store]
version = "0.12"
default-features = false
features = ["fs", "aws", "tls-webpki-roots"]

[dependencies.futures]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.reqwest]
version = "0.12"
default-features = false
features = ["blocking", "rustls-tls", "multipart", "json"]

[dependencies.hyper]
version = "1.6"
default-features = false
features = []

[dependencies.hyper-util]
version = "0.1"
default-features = false
features = ["tokio", "server", "http1"]

[dependencies.http-body-util]
version = "0.1"
default-features = false
features = []

[dependencies.leaky-bucket]
version = "1.1"
default-features = false
features = []

[dependencies.tar]
version = "0.4"
default-features = false
features = []

[dependencies.multer]
version = "3.1"
default-features = false
features = ["serde"]

[dependencies.minijinja]
version = "2.11"
default-features = false
features = ["builtins", "serde"]

[dependencies.rustls]
version = "0.23"
default-features = false
features = ["ring"]

[dependencies.rcgen]
version = "0.14"
default-features = false
features = ["ring", "pem"]

[dependencies.tokio]
version = "1.46"
default-features = false
features = ["net", "time", "macros", "rt", "rt-multi-thread"]

[dependencies.tokio-rustls]
version = "0.26"
default-features = false
features = ["ring"]

[dependencies.pinboard]
version = "2.2"
default-features = false
features = []

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["std"]

[dev-dependencies.rsa]
version = "0.9"
default-features = false
features = ["std", "sha2"]

[dev-dependencies.ed25519-dalek]
version = "2.1"
default-features = false
features = ["std", "rand_core", "pkcs8"]

[dev-dependencies.p256]
version = "0.13"
default-features = false
features = ["std", "ecdsa", "pkcs8"]


[profile.release]
lto = "fat"
codegen-units = 1
